fix: correct 'letter-spacing' values

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ a {
   text-align: center;
   text-transform: uppercase;
   vertical-align: middle;
-  letter-spacing: 3.7px;
+  letter-spacing: 3.6px;
   color: rgba(0, 0, 0, 1);      
 
   background-color: #f0c52e;
@@ -303,7 +303,7 @@ a.user-exit {
   text-align: center;
   text-transform: uppercase;
   vertical-align: middle;
-  letter-spacing: 3.7px;
+  letter-spacing: 3.6px;
   color: rgba(0, 0, 0, 1);      
 
   background-color: #f0c52e;
@@ -631,7 +631,7 @@ a.footer-user-exit {
   font-size: 16px;
   line-height: 24px;
   text-transform: uppercase;
-  letter-spacing: 3.5px;
+  letter-spacing: 3.2px;
 
   background-color: #dcdcdc;
 }
@@ -680,7 +680,7 @@ a.footer-user-exit {
   font-size: 16px;
   line-height: 24px;
   text-transform: uppercase;
-  letter-spacing: 3.5px;
+  letter-spacing: 3.2px;
 }
 
 .sort-keywords-list {
@@ -786,7 +786,7 @@ a.footer-user-exit {
   font-weight: 800;
   font-size: 16px;
   line-height: 24px;
-  letter-spacing: 3.5px;
+  letter-spacing: 3.2px;
 }
 
 .prev-page-btn a,
